--- a/templates/knowledge_base.html
+++ b/templates/knowledge_base.html
@@ -240,7 +240,8 @@
 </svg>
 
 <header class="navbar sticky-top bg-dark flex-md-nowrap p-0 shadow" data-bs-theme="dark">
-    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6 text-white" href="#">База Знаний</a>
+<!--    <p class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6">База Знаний</p>-->
+    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6 align-items-center" href="#">База Знаний</a>
 
     <ul class="navbar-nav flex-row d-md-none">
         <li class="nav-item text-nowrap">
@@ -309,6 +310,18 @@
                     </ul>
 
                     <hr class="my-3">
+
+                    <ul class="nav flex-column mb-auto">
+
+                        <li class="nav-item">
+                            <a class="nav-link d-flex align-items-center gap-2" href="/">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-double-left" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M8.354 1.646a.5.5 0 0 1 0 .708L2.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0"></path>
+                                <path fill-rule="evenodd" d="M12.354 1.646a.5.5 0 0 1 0 .708L6.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0"></path>
+                            </svg> На главную
+                            </a>
+                        </li>
+                    </ul>
 
                 </div>
             </div>
