refactor project structure

--- a/templates/templates/base.html
+++ b/templates/templates/base.html
@@ -162,10 +162,10 @@
 <div class="col-lg-8 mx-auto p-4 py-md-5">
     <header class="d-flex align-items-center pb-3 mb-5 border-bottom justify-content-center">
         <ul class="nav nav-pills">
-            <li class="nav-item"><a href="{{ routes.main_page }}" class="nav-link {% if current_page == 'MainPage' %}active{% endif %}" aria-current="page">Главная</a></li>
-            <li class="nav-item"><a href="{{ routes.knowledge_base }}" class="nav-link">База Знаний</a></li>
+            <li class="nav-item"><a href="/" class="nav-link {% if current_page == 'MainPage' %}active{% endif %}" aria-current="page">Главная</a></li>
+            <li class="nav-item"><a href="/knowledge_base" class="nav-link">База Знаний</a></li>
             <li class="nav-item"><a href="#" class="nav-link disabled" aria-disabled="true">Road map</a></li>
-            <li class="nav-item"><a href="{{ routes.contacts }}" class="nav-link {% if current_page == 'Contacts' %}active{% endif %}">Контакты</a></li>
+            <li class="nav-item"><a href="/contacts" class="nav-link {% if current_page == 'Contacts' %}active{% endif %}">Контакты</a></li>
         </ul>
     </header>
 
