add macro for generating default api handlers, update and add entities, add migrations, refactor

--- a/templates/templates/base.html
+++ b/templates/templates/base.html
@@ -163,7 +163,7 @@
     <header class="d-flex align-items-center pb-3 mb-5 border-bottom justify-content-center">
         <ul class="nav nav-pills">
             <li class="nav-item"><a href="/" class="nav-link {% if current_page == 'MainPage' %}active{% endif %}" aria-current="page">Главная</a></li>
-            <li class="nav-item"><a href="/knowledge_base" class="nav-link">База Знаний</a></li>
+            <li class="nav-item"><a href="/knowledge_base/hormones" class="nav-link">База Знаний</a></li>
             <li class="nav-item"><a href="#" class="nav-link disabled" aria-disabled="true">Road map</a></li>
             <li class="nav-item"><a href="/contacts" class="nav-link {% if current_page == 'Contacts' %}active{% endif %}">Контакты</a></li>
         </ul>
