--- a/templates/templates/main_page.html
+++ b/templates/templates/main_page.html
@@ -6,7 +6,7 @@
     <p class="lead">В процессе создания MVP.</p>
     <p class="lead">Я не претендую на авторство и не получаю никаких шекелей с этой затеи. Сделал сайт для себя, и чтобы попрактиковаться с языком Rust</p>
     <p class="lead">
-        <button href="/knowledge_base" class="btn btn-link rounded-pill px-3" type="button">База Знаний</button>
+        <button href="/knowledge_base/hormones" class="btn btn-link rounded-pill px-3" type="button">База Знаний</button>
     </p>
 </main>
 {% endblock %}
